[gd_scene load_steps=15 format=3 uid="uid://dqjuw1d4d3rnx"]

[ext_resource type="PackedScene" uid="uid://dpv577npmrp1n" path="res://test/enemy/character-skeleton.glb" id="1_0t6sv"]
[ext_resource type="Script" path="res://Unit/Enemy/enemy_skeleton.gd" id="2_r0nd8"]
[ext_resource type="PackedScene" uid="uid://begv2uphnjvod" path="res://Unit/VisualEffect/blood_taril.tscn" id="3_8wxq6"]
[ext_resource type="Script" path="res://Unit/DropItem/drop_item_point.gd" id="3_wy335"]
[ext_resource type="PackedScene" uid="uid://b4upnpxawoc68" path="res://test/attack/components/health_component.tscn" id="4_ungiq"]
[ext_resource type="PackedScene" uid="uid://cxgrdxibbb8wp" path="res://test/enemy/damage_number.tscn" id="5_w6d7j"]
[ext_resource type="Script" path="res://test/enemy/damage_number_spawn_point.gd" id="6_pmj16"]
[ext_resource type="PackedScene" uid="uid://bpiuanfjrb3aw" path="res://Unit/DropItem/pineapple_2.tscn" id="8_4740y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n1vwf"]
radius = 0.25
height = 0.75

[sub_resource type="Curve" id="Curve_f38sn"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.685504, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xjtrg"]
curve = SubResource("Curve_f38sn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fni4s"]
particle_flag_align_y = true
spread = 180.0
initial_velocity_min = 6.0
initial_velocity_max = 12.0
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_xjtrg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k8aay"]

[sub_resource type="CylinderMesh" id="CylinderMesh_6bwnl"]
material = SubResource("StandardMaterial3D_k8aay")
top_radius = 0.1
bottom_radius = 0.0
height = 1.0

[node name="Enemy Skeleton" node_paths=PackedStringArray("health_component") instance=ExtResource("1_0t6sv")]
collision_layer = 2
collision_mask = 3
script = ExtResource("2_r0nd8")
health_component = NodePath("HealthComponent")
BloodTrail = ExtResource("3_8wxq6")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="0"]

[node name="root" parent="character-skeleton" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0392323, 0)

[node name="leg-left" parent="character-skeleton/root" index="0"]
transform = Transform3D(0.8584, 2.99624e-10, -4.66458e-11, -2.99624e-10, 0.817775, -0.260949, -4.66458e-11, 0.260949, 0.817775, 0.074204, 0.223184, 0)

[node name="leg-right" parent="character-skeleton/root" index="1"]
transform = Transform3D(0.8584, -2.99624e-10, -4.66458e-11, 2.99624e-10, 0.817775, 0.260949, -4.66458e-11, -0.260949, 0.817775, -0.074204, 0.223184, 0)

[node name="torso" parent="character-skeleton/root" index="2"]
transform = Transform3D(0.999623, -0.00497698, -0.0270052, 0.00218208, 0.994725, -0.102553, 0.0273732, 0.102456, 0.994361, 0, 0.223184, 0)

[node name="arm-left" parent="character-skeleton/root/torso" index="0"]
transform = Transform3D(0.761448, 0.597649, -0.251026, -0.612073, 0.790401, 0.0251801, 0.21346, 0.134473, 0.967653, 0.15, 0.225, 0.0025)

[node name="arm-right" parent="character-skeleton/root/torso" index="1"]
transform = Transform3D(0.761448, -0.597649, -0.251026, 0.612073, 0.790401, -0.0251801, 0.21346, -0.134473, 0.967653, -0.15, 0.225, 0.0025)

[node name="head" parent="character-skeleton/root/torso" index="2"]
transform = Transform3D(1, -3.56393e-11, 6.93183e-10, -3.56393e-11, 0.994727, 0.102557, -6.93183e-10, -0.102557, 0.994727, 0, 0.26, 0)

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "sprint"
speed_scale = 0.8

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.382437, 0)
shape = SubResource("CapsuleShape3D_n1vwf")

[node name="HealthComponent" parent="." index="4" instance=ExtResource("4_ungiq")]

[node name="DamageNumberSpawnPoint" type="Marker3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.703704, 0)
script = ExtResource("6_pmj16")
DamageNumber = ExtResource("5_w6d7j")

[node name="DropItemPoint" type="Marker3D" parent="." index="6"]
script = ExtResource("3_wy335")
Pineapple = ExtResource("8_4740y")
min_drop_number = 1
max_dorp_number = 2

[node name="BloodTarilPos" type="Marker3D" parent="." index="7"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0.0245163, 0.337645)

[node name="GPUParticles3D" type="GPUParticles3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.430128, 0)
emitting = false
amount = 12
lifetime = 0.2
one_shot = true
explosiveness = 0.78
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_fni4s")
draw_pass_1 = SubResource("CylinderMesh_6bwnl")
